July 25 2008

* Moved strip_diacritics into Slug for easier reuse/better organization.
  Put class methods inside class << self block. (Norman Clarke)

July 25 2008

* Small change to allow friendly_id to work better with STI. (David Ramalho)

July 14 2008

* Improved slug generation for friendly id's with apostrophes. (alistairholt)
* Added support for namespaced models in Rakefile. (David Ramalho)

June 23 2008

* Cached most recent slug to improve performance (Emilio Tagua).

June 10 2008

* Added ability to find friendly_ids by array:

Post.find(["first-post", "second-post"])

Many thanks to Emilio Tagua (miloops) for implementing this feature.

May 15 2008

* Made friendly_id raise an error with an informative message if the method
  used to get the text for the slug returns a blank value. Previously
  friendy_id would end up raising a TypeError with a less understandable error
  message in these cases.

May 12 2008

* Added gemspec. Installing friendly_id as a gem doesn't really get you
  anything at this point, since it won't work. But I'm adding this since
  Github offers gems for free. I'll make friendly_id work when installed as a
  gem soon.


April 18, 2008

* Improved code that adds an extension to the friendly_id when attempting to
  avoid name collisions. Previously identically named items in some cases
  would cause friendly_id to die a painful death, raigin an "I give up damnit!"
  error. Seriously. Sorry about that people... it should a little more
  "friendly" now.

March 13, 2008

* Added :dependent => :destroy to slug relation, as suggested by Emilio Tagua.
* Added code to avoid an error when renaming a slugged item back to a previously
  used name. In some cases this could cause your model to fail validation with
	an "invalid slug" error.
* Incorporated documentation changes suggested by Jesse Crouch and Chris Nolan.

Feb 7, 2008

* Applied patches from blog commenter "suntzu" to fix problem with model
	values were being overwritten. See: